2021-01-20  6.9.11-59  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-59 GIT revision 16...

2021-01-20  6.9.11-59  <quetzlzacatenango@image...>
  * strip EXIF marker from profile (reference
    https://github.com/ImageMagick/ImageMagick/issues/3140).

2021-01-16  6.9.11-58  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-58 GIT revision 16343:f38ca0d37:20210116

2021-01-11  6.9.11-58  <quetzlzacatenango@image...>
  * properly identify SVG images (reference
    https://github.com/ImageMagick/ImageMagick/issues/3117).
  * duplicate operator: inverse range parameter working again (reference
    https://github.com/ImageMagick/ImageMagick/issues/3113).
  * Fix rounding error for CSS colors on i686 (reference
    https://tracker.debian.org/pkg/imagemagick).

2021-01-09  6.9.11-57  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-57 GIT revision 16301:c2f75ef89:20210109

2021-01-08  6.9.11-57  <quetzlzacatenango@image...>
  * update automake/autoconf configuration files.
  * additional checks to prevent integer overflow.

2021-01-05  6.9.11-56  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-56 GIT revision 16272:007db884f:20210105

2021-01-05  6.9.11-56  <quetzlzacatenango@image...>
  * Fix rounding error for CSS colors (reference
    https://github.com/ImageMagick/ImageMagick6/issues/129).

2021-01-03  6.9.11-55  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-55 GIT revision 16266:c3350670f:20210103

2021-01-03  6.9.11-55  <quetzlzacatenango@image...>
  * revert changes to the default max width/height of image.

2021-01-02  6.9.11-54  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-54 GIT revision 16244:6b93d4529:20210102 

2020-12-25  6.9.11-54  <quetzlzacatenango@image...>
  * enable reading of a certain grayscale TIFF image.
  * validate pixel cache offsets (reference
    https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=29039).
